Fixing icon alignments.. that's enough work for now! iframe is centred. CBF doing responsive, spent way too much time on this!

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,18 @@ footer {
   
 }
 
+.footwrap {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-size: 0.75em;
+  padding-top: 50px;
+  color: #ccc;
+
+}
+
 /***************************
 PAGE: PORTFOLIO
 ***************************/
@@ -159,6 +171,10 @@ section {
   border-radius: 100%;
 }
 
+#caption {
+  text-align: center;
+}
+
 
 
 /***************************
@@ -174,12 +190,19 @@ PAGE: CONTACT
 
 .contact-info a {
   display: block;
+  text-align: 40% 20%;
   min-height: 20px;
   background-repeat: no-repeat;
   background-size: 20px 20px;
+  background-position: 35% 20%;
   padding: 0 0 0 30px;
   margin: 0 0 10px;
     
+}
+
+#contactholder {
+
+
 }
 
 .contact-info li.phone a {
